examples/test/testpolicy8217.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8217
  namespace: namespace428
spec:
  podSelector:
    matchLabels:
      key49: value1
      key26: value22
      key13: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value33
          key5: value38
      podSelector:
        matchLabels:
          key15: value0
